# project_template

./: Makefile  README.md  project_template.code-workspace  pyproject.toml  requirements.txt  squashed_commit_message.txt
.github/workflows/: squash-commit.yml
docs/: pyproject.toml
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/src/: conf.py  index.rst
docs/src/prog_lang/: index.rst
docs/src/prog_lang/python/: index.rst
docs/src/prog_lang/python/fastai/: datablock.rst  index.rst  vision.rst
