[project]
name = "project-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Karl Han",email = "karl-han@iwktd.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alabaster (==1.0.0)",
    "attrs (==24.2.0)",
    "babel (==2.16.0)",
    "cattrs (==24.1.2)",
    "certifi (==2024.8.30)",
    "charset-normalizer (==3.4.0)",
    "docutils (==0.21.2)",
    "esbonio (==0.16.5)",
    "idna (==3.10)",
    "imagesize (==1.4.1)",
    "jinja2 (==3.1.4)",
    "lsprotocol (==2023.0.1)",
    "markupsafe (==3.0.2)",
    "packaging (==24.2)",
    "platformdirs (==4.3.6)",
    "pygls (==1.3.1)",
    "pygments (==2.18.0)",
    "pyspellchecker (==0.8.1)",
    "pyyaml (==6.0.2)",
    "requests (==2.32.3)",
    "snowballstemmer (==2.2.0)",
    "sphinx (==8.1.3)",
    "sphinx-rtd-theme (==3.0.1)",
    "sphinxcontrib-applehelp (==2.0.0)",
    "sphinxcontrib-devhelp (==2.0.0)",
    "sphinxcontrib-htmlhelp (==2.1.0)",
    "sphinxcontrib-jquery (==4.1)",
    "sphinxcontrib-jsmath (==1.0.1)",
    "sphinxcontrib-mermaid (==1.0.0)",
    "sphinxcontrib-qthelp (==2.0.0)",
    "sphinxcontrib-serializinghtml (==2.0.0)",
    "urllib3 (==2.2.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
