[tool.poetry]
name = "project-template"
version = "0.1.0"
description = ""
authors = ["Karl Han <karl-han@iwktd.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
esbonio = "^0.16.5"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-mermaid = "^1.0.0"
sphinxcontrib-plantuml = "^0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
